# go/pkg/bertymessenger/api.go
@@ -418,6 +418,8 @@ func (svc *service) streamEverything(sub messengertypes.MessengerService_EventSt
 }
 
 func (svc *service) streamShallow(sub messengertypes.MessengerService_EventStreamServer, includeInteractionsAndMedias int32) error {
+	// @n0izn0iz: shouldn't we use a db tx here?
+
 	// send account
 	{
 		svc.logger.Debug("sending account")
@@ -778,9 +780,6 @@ func (svc *service) ConversationJoin(ctx context.Context, req *messengertypes.Co
 func (svc *service) AccountUpdate(ctx context.Context, req *messengertypes.AccountUpdate_Request) (_ *messengertypes.AccountUpdate_Reply, err error) {
 	ctx, _, endSection := tyber.Section(ctx, svc.logger, "Updating account")
 	defer func() { endSection(err, "") }()
-
-	svc.handlerMutex.Lock()
-	defer svc.handlerMutex.Unlock()
 
 	avatarCID := req.GetAvatarCID()
 	if avatarCID != "" {
@@ -1287,6 +1286,7 @@ func (svc *service) MediaPrepare(srv messengertypes.MessengerService_MediaPrepar
 		return errcode.ErrInvalidInput.Wrap(errors.New("nil info"))
 	}
 
+	// open source stream
 	var file io.ReadCloser
 	if header.GetUri() != "" {
 		// open uri file
@@ -1315,67 +1315,56 @@ func (svc *service) MediaPrepare(srv messengertypes.MessengerService_MediaPrepar
 	}
 	cid := messengerutil.B64EncodeBytes(cidBytes)
 
-	svc.handlerMutex.Lock()
-	defer svc.handlerMutex.Unlock()
+	var added []bool
+	var media messengertypes.Media
 
-	return svc.db.TX(ctx, func(tx *messengerdb.DBWrapper) error {
-		// add to db
-		media := *header.Info
-		media.CID = cid
-		media.State = messengertypes.Media_StatePrepared
-		added, err := tx.AddMedias([]*messengertypes.Media{&media})
-		if err != nil {
-			return errcode.ErrDBWrite.Wrap(err)
+	// add to db
+	media = *header.Info
+	media.CID = cid
+	media.State = messengertypes.Media_StatePrepared
+	added, err = svc.db.AddMedias([]*messengertypes.Media{&media})
+	if err != nil {
+		return errcode.ErrDBWrite.Wrap(err)
+	}
+
+	// reply
+	if err := srv.SendAndClose(&messengertypes.MediaPrepare_Reply{Cid: cid}); err != nil {
+		return errcode.ErrStreamSendAndClose.Wrap(err)
+	}
+
+	// dispatch event if new
+	if len(added) > 0 && added[0] {
+		if err := svc.dispatcher.StreamEvent(messengertypes.StreamEvent_TypeMediaUpdated, &messengertypes.StreamEvent_MediaUpdated{Media: &media}, true); err != nil {
+			svc.logger.Error("unable to dispatch notification for media", logutil.PrivateString("cid", media.CID), zap.Error(err))
 		}
+	}
 
-		// dispatch event if new
-		if added[0] {
-			if err := svc.dispatcher.StreamEvent(messengertypes.StreamEvent_TypeMediaUpdated, &messengertypes.StreamEvent_MediaUpdated{Media: &media}, true); err != nil {
-				svc.logger.Error("unable to dispatch notification for media", logutil.PrivateString("cid", media.CID), zap.Error(err))
-			}
-		}
-
-		// reply
-		if err := srv.SendAndClose(&messengertypes.MediaPrepare_Reply{Cid: cid}); err != nil {
-			return errcode.ErrStreamSendAndClose.Wrap(err)
-		}
-
-		// success
-		return nil
-	})
+	return nil
 }
 
 func (svc *service) MediaRetrieve(req *messengertypes.MediaRetrieve_Request, srv messengertypes.MessengerService_MediaRetrieveServer) (err error) {
 	ctx, _, endSection := tyber.Section(srv.Context(), svc.logger, "Retrieving media")
 	defer func() { endSection(err, "") }()
 
-	var attachment *io.PipeReader
-	if err := func() error {
-		svc.handlerMutex.Lock()
-		defer svc.handlerMutex.Unlock()
+	// prepare header
+	medias, err := svc.db.GetMedias([]string{req.GetCid()})
+	if err != nil {
+		return errcode.ErrInvalidInput.Wrap(err)
+	}
+	if len(medias) == 0 {
+		return errcode.ErrInternal.Wrap(err)
+	}
+	media := medias[0]
 
-		// prepare header
-		medias, err := svc.db.GetMedias([]string{req.GetCid()})
-		if err != nil {
-			return errcode.ErrInvalidInput.Wrap(err)
-		}
-		if len(medias) == 0 {
-			return errcode.ErrInternal.Wrap(err)
-		}
-		media := medias[0]
+	// send header
+	if err := srv.Send(&messengertypes.MediaRetrieve_Reply{Info: media}); err != nil {
+		return errcode.ErrStreamHeaderWrite.Wrap(err)
+	}
 
-		// send header
-		if err := srv.Send(&messengertypes.MediaRetrieve_Reply{Info: media}); err != nil {
-			return errcode.ErrStreamHeaderWrite.Wrap(err)
-		}
-
-		// open download
-		if attachment, err = svc.attachmentRetrieve(ctx, req.GetCid()); err != nil {
-			return errcode.ErrAttachmentRetrieve.Wrap(err)
-		}
-		return nil
-	}(); err != nil {
-		return err
+	// open download
+	attachment, err := svc.attachmentRetrieve(ctx, req.GetCid())
+	if err != nil {
+		return errcode.ErrAttachmentRetrieve.Wrap(err)
 	}
 	defer attachment.Close()
 
@@ -1395,26 +1384,41 @@ func (svc *service) ConversationLoad(ctx context.Context, request *messengertype
 		return nil, errcode.ErrInvalidInput.Wrap(fmt.Errorf("no conversation pk or ref cid specified"))
 	}
 
-	interactions, medias, err := svc.db.GetPaginatedInteractions(request.Options)
-	if err != nil {
-		return nil, err
-	}
+	var (
+		ais          []*messengertypes.Interaction
+		interactions []*messengertypes.Interaction
+		medias       []*messengertypes.Media
+	)
 
-	if len(interactions) == 0 {
-		return nil, errcode.ErrNotFound.Wrap(fmt.Errorf("nothing to return"))
-	}
-
-	if !request.Options.NoBulk {
-		if medias == nil {
-			medias = []*messengertypes.Media{}
+	if err := svc.db.TX(ctx, func(d *messengerdb.DBWrapper) error {
+		var err error
+		interactions, medias, err = d.GetPaginatedInteractions(request.Options)
+		if err != nil {
+			return err
 		}
-		ais := make([]*messengertypes.Interaction, len(interactions))
-		for i, inte := range interactions {
-			if ais[i], err = svc.db.GetAugmentedInteraction(inte.CID); err != nil {
-				return nil, errcode.ErrDBRead.Wrap(err)
+
+		if len(interactions) == 0 {
+			return errcode.ErrNotFound.Wrap(fmt.Errorf("nothing to return"))
+		}
+
+		if !request.Options.NoBulk {
+			if medias == nil {
+				medias = []*messengertypes.Media{}
+			}
+			ais = make([]*messengertypes.Interaction, len(interactions))
+			for i, inte := range interactions {
+				if ais[i], err = d.GetAugmentedInteraction(inte.CID); err != nil {
+					return errcode.ErrDBRead.Wrap(err)
+				}
 			}
 		}
 
+		return nil
+	}); err != nil {
+		return nil, err
+	}
+
+	if !request.Options.NoBulk {
 		if err := svc.dispatcher.StreamEvent(messengertypes.StreamEvent_TypeConversationPartialLoad, &messengertypes.StreamEvent_ConversationPartialLoad{
 			ConversationPK: interactions[0].ConversationPublicKey,
 			Interactions:   ais,
@@ -1440,6 +1444,14 @@ func (svc *service) ConversationLoad(ctx context.Context, request *messengertype
 	}
 
 	return &messengertypes.ConversationLoad_Reply{}, nil
+}
+
+func (svc *service) ConversationGet(ctx context.Context, request *messengertypes.ConversationGet_Request) (*messengertypes.ConversationGet_Reply, error) {
+	conv, err := svc.db.GetConversationByPK(request.GetGroupPK())
+	if err != nil {
+		return nil, errcode.ErrDBRead.Wrap(err)
+	}
+	return &messengertypes.ConversationGet_Reply{Conversation: conv}, nil
 }
 
 func (svc *service) MediaGetRelated(ctx context.Context, request *messengertypes.MediaGetRelated_Request) (*messengertypes.MediaGetRelated_Reply, error) {
